cambio en la referencia css e imágenes

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 		<meta charset="UTF-8"/>
 		<meta name="description" content="Este es el mejor intento que se puede del ejemplo de la clase 2">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="..\static\normalize.css">
-		<link rel="stylesheet" type="text/css" href="..\static\estilos2.css">
+		<link rel="stylesheet" type="text/css" href="static\normalize.css">
+		<link rel="stylesheet" type="text/css" href="static\estilos2.css">
 	</head>
 	<body>
 		<header id="yo" class="Header">
@@ -20,7 +20,7 @@
 			</nav>	
 				<figure class="Header-imageContainer">
 					<center>
-						<img src="../images/avatar.png" alt="imagen personal" class="Header-image">
+						<img src="images/avatar.png" alt="imagen personal" class="Header-image">
 						<figcaption class="Header-imageDescription">
 							<a href="https://twitter.com/elyak123" target="_blank" class="Header-link">@elyak123</a>
 							<p class="Header-name">Javier Llamas</p>
@@ -41,25 +41,25 @@
 			<h2 class="Work-title u-title" >Mi trabajo</h2>
 				<article class="Work-item">
 					<figure class="Work-imageContainer">
-						<img class="Work-image" src="../images/ElPadrinocartel.jpg" alt="descripcion de la imagen 1">
+						<img class="Work-image" src="images/ElPadrinocartel.jpg" alt="descripcion de la imagen 1">
 						<figcaption class="Work-imageDescription"> El Padrino</figcaption>
 					</figure>
 				</article>
 				<article class="Work-item">
 					<figure class="Work-imageContainer">
-						<img class="Work-image" src="../images/theshining.jpg" alt="descripcion de la imagen 1">
+						<img class="Work-image" src="images/theshining.jpg" alt="descripcion de la imagen 1">
 						<figcaption class="Work-imageDescription">El Resplandor</figcaption>
 					<figure/>
 				</article>
 				<article class="Work-item">
 					<figure class="Work-imageContainer">
-						<img class="Work-image" src="../images/familyman.jpg" alt="descripcion de la imagen 1">
+						<img class="Work-image" src="images/familyman.jpg" alt="descripcion de la imagen 1">
 						<figcaption class="Work-imageDescription">Hombre de Familia</figcaption>
 					<figure/>
 				</article>
 				<article class="Work-item">
 					<figure class="Work-imageContainer">
-						<img class="Work-image" src="../images/kingdom.jpg" alt="descripcion de la imagen 1">
+						<img class="Work-image" src="images/kingdom.jpg" alt="descripcion de la imagen 1">
 						<figcaption class="Work-imageDescription">La Cruzada</figcaption>
 					<figure/>
 				</article>
