ups error ortografico

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Portafilio.la</title>
 		<meta charset="UTF-8"/>
-		<meta name ="viewport" content="width=device-whidth, user-scalable=no">
+		<meta name ="viewport" content="width=device-width, user-scalable=no">
 		<meta name="description" content="Este es el mejor intento que se puede del ejemplo de la clase 2">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="static\normalize.css">
