Se agrega geolocalizacion

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<textarea class="Footer-textArea" placeholder="Comentario"></textarea>
 				<button class="Footer-button" type="submit"> Contáctame</button>
 			</form>
-
+		<script type="text/javascript" src="geo.js"></script>
 		</footer>
 	</body>
 
